  Instead of simply guaranteeing a byte str will be returned we now guarantee
  the byte str will be valid in a certain encoding (the str may still be
  mangled but it will be valid).
* Updated subprocess and base64 modules from latest python-2.7 branch.
* Fix i18n Translation objects to set input_charset and output_charset on any
  fallback objects.

-----
1.0.0
-----

* Add a pointer to ordereddict and iterutils in the docs
* Change a few pieces of code to not internally mix bytes and unicode

-----
0.2.4
-----

* Have easy_gettext_setup return lgettext functions instead of gettext
  functions when use_unicode=False
* Correct docstring for kitchen.text.converters.exception_to_bytes() -- we're
  transforming into a byte str, not into unicode.
* Correct some examples in the unicode frustrations documentation
* Correct some cross-references in the documentation

-----
0.2.3
-----

* Expose MAXFD, list2cmdline(), and mswindows in kitchen.pycompat27.subprocess.
  These are undocumented, and not in upstream's __all__ but google (and bug
  reports against kitchen) show that some people are using them.  Note that
  upstream is leaning towards these being private so they may be deprecated in
  the python3 subprocess.

-----
0.2.2
-----

* Add kitchen.text.converters.exception_to_bytes() and
  kitchen.text.converters.exception_to_unicode() that take an exception object
  and convert it into a text representation.
* Add a documentation section on how API can be simplified if you can limit your encodings

If all goes well, we'll be making a 1.0 release shortly which is basically this release.

-------
0.2.2a1
-------

* Fix exception messages that contain unicode characters
* Speed up to_unicode for the common cases of utf-8 and latin-1.
* kitchen.i18n.NewGNUTranslations object that always returns unicode for
  ugettext and ungettext, always returns str for the other gettext functions,
  and doesn't throw UnicodeError.